--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,13 @@
   color: #61dafb;
 }
 
+.info{
+  font-family: 'Roboto Condensed', sans-serif !important;
+}
+body{font-family: 'Crimson Text', serif !important;
+ 
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
